--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
