--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.29.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "eventsource-parser": "^1.1.2",
     "lucide-react": "^0.367.0",
     "nanoid": "^5.0.7",
     "next": "14.1.4",
