--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
