--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.29.2",
+    "@upstash/ratelimit": "^1.2.0",
+    "@upstash/redis": "^1.31.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eventsource-parser": "^1.1.2",
